--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="data:image/png;base64," />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no" />
     <title>TXT阅读器</title>
   </head>
   <body>
